--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 // change colors
-$link-color: red;
 
-// import original bootstrap
-@import "twitter/bootstrap";
+
+
+/* forms */
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
